Effective template used for 2021 call

--- a/PartB1.tex
+++ b/PartB1.tex
@@ -11,7 +11,7 @@
 \begin{document}
 
 \itnpage{START PAGE}
-\tableofcontents
+{\small\tableofcontents}
 \note{Table of Contents should be one page, but bear in mind it's across two documents}
 
 % Part B1 sections
