--- a/PartB2.tex
+++ b/PartB2.tex
@@ -18,9 +18,9 @@
 \tableofcontents
 
 % Part B2 sections
-\include{eid}
+% \include{eid} No longer required
 \include{organisations}
-\include{ethics}
+% \include{ethics} No longer required
 \include{letters}
 
 \itnpage{END PAGE}
