--- a/common.tex
+++ b/common.tex
@@ -2,16 +2,17 @@
 %% Common definitions across Part B1, Part B2 and hence master.tex
 %%
 
-% Packages
-% \usepackage{graphicx}
-% \usepackage{textcomp} % for \texteuro
-% \usepackage{wrapfig}
+\usepackage{graphicx}
 
-% Citations.  Must use biber for \footcite and \fullcite
+\usepackage{textcomp} % for \texteuro
+\usepackage{pgfgantt}
+\usepackage{wrapfig}
+
+% Citations
 \addbibresource{itn-refs.bib}
 
 % The total number of ESRs
-\newcommand{\esrcount}{fifteen\xspace}
+\newcommand{\researchercount}{ten\xspace}
 
 %%% Local Variables:
 %%% mode: latex
