--- a/excellence.tex
+++ b/excellence.tex
@@ -1,13 +1,12 @@
 \section{Excellence}
 \note{Should start on page 5; aim for 10 to 12 pages.}
 
-\subsection{Quality, innovative aspects and credibility of the research
-  programme}
-\note{including inter/multidisciplinary, intersectoral and, where appropriate,
-  gender aspects}
+\subsection{Quality and pertinence of the project's research and innovation objectives}
+\note{and the extent to which they are ambitious, and go beyond the state of the art}
 
 \subsubsection{Introduction, objectives and overview of the research programme}
-\note{For ETN, it should be explained how the individual projects of the recruited researchers will be integrated into --- and contribute to --- the overall research programme. EJD and EID proposals should describe the research projects in the context of a doctoral training programme}
+\note{it should be explained how the individual projects of the recruited researchers will be integrated into --- and contribute to --- the overall research programme. All proposals should describe the research projects in the context of a doctoral training programme.  Are the objectives measurable and verifiable? Are they realistically achievable?}
+
 
 \itncaption{Table 1.1: Work Package (WP) List}
 \note{The WP names are defined in common.tex}
@@ -27,25 +26,19 @@
     \hline
 \end{itntable}
 
-\subsubsection{Research methodology and approach}
-\label{sec:method}
+\newpage
+\subsection{Soundness of the proposed methodology}
+\note{including interdisciplinary approaches, consideration of the gender dimension and other diversity aspects if relevant for the research project, and the quality and appropriateness of open science practices}
 
-Here you can cite with footnotes\cite{Bayes1763}.
+\subsubsection{Research data management and management of other research outputs}
 
-\subsubsection{Originality and innovative aspects of the research programme}
-
-\itnsection{Beyond the state of the art}
-
-\itnsection{Existing programmes}
-
-\subsection{Quality and innovative aspects of the training programme}
+% Should be 1.3 as of 2021
+\subsection{Quality and credibility of the training programme}
 \note{including transferable skills, inter/multi-disciplinary, inter-sectoral and, where appropriate, gender aspects}
 
-\subsubsection{Overview and content structure of the training}
-\label{sec:training}
-\note{including network-wide training events and complementarity with those programmes offered locally at the participating organisations (please include table 1.2a and table 1.2b)}
+\subsubsection{Overview and content structure of the doctoral training programme}
 
-\itncaption{Table 1.2a: Recruitment Deliverables per Beneficiary}
+\itncaption{Table 1.3a: Recruitment Deliverables per Beneficiary}
 \begin{itntable}{|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|>{\ra}p{30mm}|}
     \colorrow
     \hline
@@ -59,9 +52,9 @@ Here you can cite with footnotes\cite{Bayes1763}.
     \hline
     Total & & & & XXX \\
     \hline
-\end{itntable}
+    \end{itntable}
 
-\itncaption{Table 1.2b: Main Network-Wide Training Events, Conferences and Contribution of Beneficiaries}
+\itncaption{Table 1.3b: Main Network-Wide Training Events, Conferences and Contribution of Beneficiaries}
 \begin{itntable}{|>{\ra}p{10mm}|>{\ra}p{85mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|>{\ra}p{20mm}|}
     \colorrow
     \hline &
@@ -75,29 +68,20 @@ Here you can cite with footnotes\cite{Bayes1763}.
 \end{itntable}
 
 
-\subsubsection{Role of non-academic sector in the training programme}
-
-\subsection{Quality of the supervision}
-\note{including mandatory joint supervision for EID and EJD}
-
 \subsubsection{Qualifications and supervision experience of supervisors}
+
 
 \subsubsection{Quality of the joint supervision arrangements}
 \note{mandatory for EID and EJD}
 \note{Would make sense here to emphasise the multidisciplinarity - add a table?}
 
-
-\subsection{Quality of the proposed interaction between the participating organisations}
-
 \subsubsection{Contribution of all participating organisations to the research and training programme}
 
-\subsubsection{Synergies between participating organisations}
-\label{sec:synergies}
 
+\subsubsection{Synergies between participating organisations}
 
 \subsubsection{Exposure of recruited researchers to different (research)
   environments, and the complementarity thereof}
-
 
 %%% Local Variables:
 %%% mode: latex
