--- a/impact.tex
+++ b/impact.tex
@@ -1,27 +1,49 @@
 \section{Impact}
 
-\subsection{Enhancing the career perspectives and employability of researchers
-  and contribution to their skills development}
-\note{In this section, please explain the impact of the research and training
-  on the fellows' careers}
+\subsection{Contribution to structuring doctoral training at the European level and to strengthening European innovation capacity}
+\note{a) meaningful contribution of the non-academic sector to the doctoral training, as appropriate to the implementation mode and research field
+b) developing sustainable elements of doctoral programmes}
 
-\subsection{Contribution to structuring doctoral/early-stage research training at the European level and to strengthening European innovation capacity}
-\note{including the potential for:}
 
-a) Meaningful contribution of the non-academic
-  sector to the doctoral / research training (as appropriate to the
-  implementation mode and research field)
-b) Developing sustainable (= lasting)
-  joint doctoral degree structures (for EJD only)
+\subsection{Credibility of the measures to enhance the career perspectives and employability of researchers and contribution to their skills development}
+\note{In this section, please explain the impact of the research and training on the fellows' careers.}
 
-\subsection{Quality of the proposed measures to exploit and disseminate the
-  results}
-\subsubsection{Dissemination of the research results}
-\subsubsection{Exploitation of results and intellectual property}
 
-\subsection{Quality of the proposed measures to communicate the activities to
-  different target audiences}
-\subsubsection{Communication and public engagement strategy}
+\subsection{Quality of the proposed measures to exploit and disseminate the results}
+
+\subsubsection{Plan for the dissemination and exploitation activities, including communication activities}
+
+\note{Describe the planned measures to maximise the impact of your project by providing a first version of your ‘plan for the dissemination and exploitation including communication activities’. Regarding communication measures and public engagement strategy, the aim is to inform and reach out to society and show the activities performed, and the use and the benefits the project will
+have for citizens. Activities must be strategically planned, with clear objectives, start at the outset and continue through the lifetime of the project. The description of the communication activities needs to state the main messages as well as the tools and channels that will be used to reach out to each of the chosen target groups.}
+
+
+\itncaption{Table 2.1: The overall communication and dissemination plan of \project }
+\begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{120mm}|}
+    \colorrow\hline
+    \textbf{Target Audience} &
+    \textbf{Mode of communication} \\
+    \hline
+\end{itntable}
+
+
+\subsubsection{Strategy for the management of intellectual property}
+
+\subsection{The magnitude and importance of the project’s contribution to the expected scientific societal and economic impacts}
+
+\subsubsection{Expected scientific impact}
+
+\note{e.g. contributing to specific scientific advances, across and
+within disciplines, creating new knowledge, reinforcing scientific equipment and instruments, computing systems (i.e. research infrastructures)}
+
+\subsubsection{Expected economic/technological impact}
+
+\note{e.g. bringing new products, services, business
+processes to the market, increasing efficiency, decreasing costs, increasing profits, contributing to standards’ setting, etc.}
+
+
+\subsubsection{Expected societal impact}
+
+\note{decreasing CO2 emissions, decreasing avoidable mortality, improving policies and decision-making, raising consumer awareness}
 
 
 
