--- a/letters.tex
+++ b/letters.tex
@@ -3,5 +3,4 @@
 
 The following pages contain letters of commitment from the partner organisations.
 
-% Use this form to get a single page PDF file in
-% \includepdf{letter1}
+%\includepdf{letters/LETTER}
