--- a/organisations.tex
+++ b/organisations.tex
@@ -1,7 +1,7 @@
 \section{Participating Organisations}
 \note{All organisations (whether beneficiaries or partner organisations) must complete the appropriate table below. Complete one table of maximum one page per beneficiary and half a page per partner organisation (minimum font size: 8). Entities with a capital or legal link should be described together with the linked beneficiary.}
 
-% Duplicate it for each organisation
+% Please leave this template here, duplicate it for each organisation
 \note{%
 \begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
     \colorrow
@@ -20,23 +20,20 @@
     \hline
     \textbf{Current Involvement in Research and Training Programmes, including ITN} & \\
     \hline
-    \textbf{Submission of similar proposals under the same H2020-MSCA-ITN-2020 call} & \\
-    \hline
-    \textbf{Relevant Publications and/or Research / Innovation Product} &
-    \fullcite{Bayes1763}\newline
-    And whatever else
-    \\
+    \textbf{Relevant Publications and/or Research / Innovation Product} & \\
     \hline
 \end{itntable}
 }
 
+
+
 \newpage
-% Duplicate it for each organisation
+% Please leave this template here, duplicate it for each organisation
 \note{%
 \begin{itntable}{|>{\ra}p{40mm}|>{\ra}p{130mm}|}
     \colorrow
     \hline
-    \multicolumn{2}{|l|}{\textbf{Partner Organisation Legal Name:} Name of organisation} \\
+    \multicolumn{2}{|l|}{\textbf{Associated Partner Legal Name:} Name of organisation} \\
     \hline
     \textbf{General Description} & \\
     \hline
@@ -46,7 +43,7 @@
     \hline
     \textbf{Previous and Current Involvement in Research and Training Programmes} & \\
     \hline
-    \textbf{Relevant Publications and/or Research / Innovation Product} & \\
+    \textbf{Relevant Publications / datasets / software / Innovation product / other achievements} & \\
     \hline
 \end{itntable}
 }
