--- a/participants.tex
+++ b/participants.tex
@@ -17,17 +17,19 @@
     \colorrow
     \textbf{Beneficiaries} &&&&&&&& \\
     \hline
-    &&&&&&&& \\
+    \colorrow
+    \textbf{Associated partners} &&&&&&&& \\
     \hline
     \colorrow
-    \textbf{Partner Organisations} &&&&&&&& \\
-    \hline
-    &&&&&&&& \\
+    \textbf{Associated partners linked to a beneficiary} &&&&&&&& \\
     \hline
 \end{itntable}
 
+%Notes:
+%\begin{compactenum}
+%\end{compactenum}
+
 \newpage
-% There are more tables here that we didn't need
 \centerline{Page left blank for consistent page count.}
 
 %%% Local Variables:
