--- a/quality.tex
+++ b/quality.tex
@@ -1,22 +1,20 @@
 \section{Quality and Efficiency of the Implementation}
 
-\subsection{Coherence and effectiveness of the work plan}
-\note{including appropriateness of the allocation of tasks and resources
-  (including awarding of the doctoral degrees for EID and EJD)}
+\subsection{Quality and effectiveness of the work plan, assessment of risks and appropriateness of the effort assigned to work packages}
+\note{including appropriateness of the allocation of tasks and resources (including awarding of the doctoral degrees for EID and EJD)}
 
 \subsubsection{Work Packages description}
 \note{please include table 3.1a}
 
-\subsection*{Table 3.1a: Description of Work Packages}
+\itncaption{Table 3.1a: Description of Work Packages}
 
-% One for each WP
-\note{%
+% Generic template
+\note{%}
 \begin{itnwp}{MX -- MY}{Title}{Lead}
     \itnwppar{Objectives}{%
     }\\
     \hline    
-    \itnwppar{Description of Work and Role of Specific Beneficiaries / Partner 
-Organisations}{%
+    \itnwppar{Description of Work and Role of Specific Beneficiaries / Associated partners}{%
     }\\
     \itnwptask{Task name}{Task description}\\
     \hline
@@ -24,6 +22,7 @@ Organisations}{%
     }\\
 \end{itnwp}
 }
+
 
 \subsubsection{List of major deliverables}
 \note{please include table 3.1b, including the awarding of doctoral degrees, where applicable}
@@ -39,72 +38,68 @@ Organisations}{%
     Dissemination level:
     \begin{compactdesc}
     \item[PU] Public: fully open, e.g. web
-    \item[CO] Confidential: restricted to consortium, other designated entities (as appropriate) and Commission services; Please consider that deliverables marked as "PU" will automatically be published on CORDIS once approved: the applicants should therefore consider the relevance of marking a deliverable as "PU"
+    \item[CO] Confidential: restricted to consortium, other designated entities (as appropriate) and Commission services; Please consider that deliverables marked as ``PU'' will automatically be published on CORDIS once approved: the applicants should therefore consider the relevance of marking a deliverable as ``PU''
     \item[CI] Classified: classified information as intended in Commission Decision 2001/844/EC
     \end{compactdesc}
 }
-\subsection*{Table 3.1b: Deliverables List}
+\itncaption{Table 3.1b: Deliverables List}
 \begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
     \hline
-    \rowcolor{olive!30}
+    \colorrow
     \multicolumn{7}{|l|}{\textbf{Scientific Deliverables}} \\
     \hline
-    \rowcolor{olive!30}
+    \colorrow
     \textbf{Deliverable Number} &
     \textbf{Deliverable Title} &
     \textbf{WP No.} &
     \textbf{Lead Beneficiary Short Name} &
     \textbf{Type} &
-    \textbf{Dissemination Level} &
+    \textbf{Dissem. Level} &
     \textbf{Due Date} \\
     \hline
-    & & & & & & \\
+    % Split it here if need be
+\end{itntable}
+\begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|>{\ra}p{15mm}|}
     \hline
-    \rowcolor{olive!30}
+    \colorrow
     \multicolumn{7}{|l|}{\textbf{Management, Training, Recruitment and Dissemination Deliverables}} \\
     \hline
-    \rowcolor{olive!30}
+    \colorrow
     \textbf{Deliverable Number} &
     \textbf{Deliverable Title} &
     \textbf{WP No.} &
     \textbf{Lead Beneficiary Short Name} &
     \textbf{Type} &
-    \textbf{Dissemination Level} &
+    \textbf{Dissem. Level} &
     \textbf{Due Date} \\
-    \hline
-    & & & & & & \\
     \hline
 \end{itntable}
 
-
 \subsubsection{List of major milestones}
-\note{please include table 3.1c}
 
-\subsection*{Table 3.1c: Milestones List}
-\note{6 to 8 is OK}
+\itncaption{Table 3.1c: Milestones List}
+
 \begin{itntable}{|>{\ra}p{15mm}|>{\ra}p{50mm}|>{\ra}p{15mm}|>{\ra}p{20mm}|>{\ra}p{15mm}|>{\ra}p{35mm}|}
     \hline
-    \rowcolor{olive!30}
+    \colorrow
     \textbf{Number} &
     \textbf{Title} &
     \textbf{Related Work Packages} &
     \textbf{Lead Beneficiary} &
-    \textbf{Due Data} &
+    \textbf{Due Date} &
     \textbf{Means of Verification} \\
-    \hline
-    & & & & & \\
     \hline
 \end{itntable}
 
 \subsubsection{Fellow's individual projects, including secondment plan}
-\note{please include table 3.1d}
-\subsection*{Table 3.1d: Individual Research Projects}
-% Generic template; take a copy for each ESR
+
+\itncaption{Table 3.1d: Individual Research Projects}
+
 \note{%
 \begin{itnrp}
-    & & Y & M9 & 36 months & \\
+    X & X & X & X & X & X \\
     \hline
-    \itnrppar{Project Title and Work Package(s) to which it is related}{%
+    \itnrppar{Project Title and Work Package(s) to which it is related}{
     }\\ \hline
     \itnrppar{Objectives}{%
     }\\ \hline
@@ -116,86 +111,57 @@ Organisations}{%
 }
 
 
-\subsubsection{EID specific requirements}
-\note{for EID proposals, an additional table should be completed in part B2}
-
-The proposal is not an EID.
-
-\subsection{Appropriateness of the management structures and procedures}
-\note{including quality management and risk management (with a mandatory joint
-  governing structure for EID and EJD)}
-
-\subsubsection{Network organisation and management structure}
+\subsubsection{Network organisation}
 \note{including financial management strategy, strategy for dealing with
   scientific misconduct}
 
-\subsubsection{Joint governing structure}
-\note{mandatory for EID and EJD actions}
-
-\subsubsection{Supervisory board}
-
-\subsubsection{Recruitment strategy}
-
-\subsubsection{Progress monitoring and evaluation of individual projects}
 
 \subsubsection{Risk management}
 \note{at consortium level (including table 3.2a)}
 
-\subsubsection{Intellectual Property Rights (IPR)}
-
-\subsubsection{Gender aspects}
-\note{both at the level of recruitment and that of decision- making within the
-  action}
-
-\subsubsection{Data management plan}
-\note{see page 26 above regarding the Open Access and Open Data under Horizon
-  2020}
-
-\subsection*{Table 3.2a: Implementation Risks}
-\begin{itntable}{|>{\ra}p{10mm}|>{\ra}p{35mm}|>{\ra}p{15mm}|>{\ra}p{100mm}|}
+\itncaption{Table 3.1e: Implementation Risks}
+\begin{itntable}{|>{\ra}p{60mm}|>{\ra}p{15mm}|>{\ra}p{90mm}|}
     \hline
-    \rowcolor{olive!30}
-    \textbf{Risk No.} &
-    \textbf{Description of Risk} &
-    \textbf{WP Number} &
-    \textbf{Proposed mitigation measures} \\
-    \hline
-    R1 & & WP1 & \\
+    \colorrow
+    \textbf{Description of risk} (likelihood / severity) &
+    \textbf{WPs involved} &
+    \textbf{Proposed risk-mitigation measures} \\
     \hline
 \end{itntable}
 
+\subsubsection{Intellectual Property Rights (IPR)}
 
-\subsection{Appropriateness of the infrastructure of the participating
-  organisations}
+
+\subsubsection{Gender aspects}
+\label{sec:gender}
+\note{both at the level of recruitment and that of decision-making within the action}
+
+
+\subsubsection{Environmental aspects in light of the MSCA Green Charter}
+
+
+\subsection{Quality, capacity and role of each participant, including hosting arrangements and extent to which the consortium as a whole brings together the necessary expertise}
+
+\subsubsection{Appropriateness of the infrastructure and capacity of each participating
+  organisation}
 \note{Explain the appropriateness of the infrastructure of each participating
-  organisation, as outlined in Section 5 (Participating Organisations), in
+  organisation, as outlined in Section 4 (Participating Organisations), in
   light of the tasks allocated to them in the action}
 
-\subsection{Competences, experience and complementarity of the participating
-  organisations and their commitment to the programme}
 
 \subsubsection{Consortium composition and exploitation of participating
   organisations' complementarities}
-\note{explain the compatibility and coherence between the tasks attributed to
-  each beneficiary/partner organisation in the action, including in light of
-  their experience}
+\note{explain the compatibility and coherence between the tasks attributed to each beneficiary/partner organisation in the action, including in light of their experience}
+\label{sec:composition}
 
-\subsubsection{Commitment of beneficiaries and partner organisations to the
-  programme}
-\note{for partner organisations, please see also sections 5 and 7) i) Funding
-  of non-associated third countries (if applicable): Only entities from EU
-  Member States, from Horizon 2020 Associated Countries or from countries
-  listed in General Annex A to the Work Programme are automatically eligible
-  for EU funding. If one or more of the beneficiaries requesting EU funding is
-  based in a country that is not automatically eligible for such funding, the
-  application shall explain in terms of the objectives of the action why such
-  funding would be essential. Only in exceptional cases will these
-  organisations receive EU funding.49 The same applies for international
-  organisations other than IEIO.  ii) Partner organisations: The role of
-  partner organisations and their active contribution to the research and
-  training activities should be described. A letter of commitment shall also be
-  provided in section 7 and must follow the template (included within the PDF
-  file, but outside the page limit)}
+
+\subsubsection{Commitment of beneficiaries and associated partners to the programme}
+\note{for partner organisations, please see also sections 5 and 7) i) Funding of non-associated third countries (if applicable): Only entities from EU Member States, from Horizon 2020 Associated Countries or from countries listed in General Annex A to the Work Programme are automatically eligible for EU funding. If one or more of the beneficiaries requesting EU funding is based in a country that is not automatically eligible for such funding, the application shall explain in terms of the objectives of the action why such funding would be essential. Only in exceptional cases will these organisations receive EU funding.49 The same applies for international organisations other than IEIO.  ii) Partner organisations: The role of partner organisations and their active contribution to the research and training activities should be described. A letter of commitment shall also be provided in section 7 and must follow the template (included within the PDF file, but outside the page limit)}
+
+
+\subsubsection{Funding of non-associated third countries}
+
+
 
 %%% Local Variables:
 %%% mode: latex
