--- a/master.tex
+++ b/master.tex
@@ -1,6 +1,5 @@
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 
 % Generic ITN style
 \usepackage[ACRONYM,draft]{itn}
@@ -12,7 +11,7 @@
 
 \itnpage{START PAGE}
 {\small\tableofcontents} % Just for master.tex
-\note{Table of Contents should be one page}
+\note{Table of Contents should be one page, but bear in mind it's across two documents}
 
 % Part B1 sections
 \include{participants}
@@ -21,17 +20,12 @@
 \include{quality}
 
 % Part B2 sections
-\include{eid}
+% \include{eid} No longer required
 \include{organisations}
-\include{ethics}
+% \include{ethics} No longer required
 \include{letters}
 
 \itnpage{END PAGE}
-
-\appendix
-
-% Can be handy, but remove for the submission
-%\include{notes}
 
 \end{document}
 
